# wl

./: .gitignore  Cargo.toml
wl_common/: Cargo.toml
wl_common/src/: interface.rs  lib.rs  protocol.rs  resource.rs  wire.rs
wl_protocol/: Cargo.toml
wl_protocol/src/: lib.rs
wl_protocols/: Cargo.toml
wl_protocols/src/: lib.rs
wl_scanner/: Cargo.toml
wl_scanner/src/: doc.rs  fancy_doc.rs  generator.rs  lib.rs  scanner.rs
wl_scanner/src/doc/: html.rs  markdown.rs
wl_scanner/src/generator/: helpers.rs
wl_server/: Cargo.toml  build.rs
wl_server/examples/: server.rs
wl_server/src/: client.rs  global.rs  lib.rs  net.rs  object.rs  protocol.rs  resource.rs  server.rs
xdg_shell_protocol/: Cargo.toml  build.rs
xdg_shell_protocol/src/: lib.rs
