[package]
name = "wl_server"
version = "0.1.0"
authors = ["Benny Aguilera <bennycaguilera@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.9"
log = "0.4.8"

nix = "^0.18.0"
byteorder = "1.3.4"
bitflags = "1.2.1"

graph_storage = { path = "../../graph_storage" }
loaner = { path = "../../loaner" }

wl_common = { path = "../../wl/wl_common" }

[build-dependencies]
wl_scanner = { path = "../wl_scanner" }

[dev-dependencies]
fern = { version = "0.6.0", features = ["colored"] }